--- a/app/src/main/res/layout/activity_shop_plan_form.xml
+++ b/app/src/main/res/layout/activity_shop_plan_form.xml
@@ -6,7 +6,7 @@
     android:padding="16dp">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
         android:textSize="18sp"
@@ -19,7 +19,7 @@
         android:hint="Enter title" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Shop"
         android:textSize="18sp"
@@ -27,7 +27,7 @@
         android:layout_marginTop="16dp" />
 
     <EditText
-        android:id="@+id/editTextShop"
+        android:id="@+id/editTextShopName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter shop name" />
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical"
+        android:gravity="end|center_vertical"
         android:layout_marginTop="16dp">
 
         <TextView
@@ -75,31 +75,26 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewShopItems"
+        android:id="@+id/recyclerViewItems"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginTop="16dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textViewTotalPrice"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="end">
+        android:text="Total Price: $0.00"
+        android:textSize="26sp"
+        android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/buttonSubmit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Submit" />
-
-        <Button
-            android:id="@+id/buttonCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:layout_marginStart="16dp" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/buttonSave"
+        android:layout_width="173dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="Save" />
 
 </LinearLayout>
