--- a/app/src/main/res/layout/item_shop_plan.xml
+++ b/app/src/main/res/layout/item_shop_plan.xml
@@ -1,7 +1,7 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,6 +40,14 @@
             android:layout_weight="1"
             android:textAppearance="?android:textAppearanceMedium"
             android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/menu_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_menu_item"
+            android:padding="1dp" />
 
     </LinearLayout>
 
