--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.8"
-            android:gravity="center_vertical"
+            android:gravity="right|center_vertical"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_margin="4dp"/>
